[svn r7216] update for new jacorb usage